[tool.poetry]
name = "lineartransform"
version = "0.1.0"
description = ""
authors = ["KlukaCross <Jktu332@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
opencv-python = "^4.8.1.78"
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
